end of the project

--- a/TravelBook/Base.lproj/Main.storyboard
+++ b/TravelBook/Base.lproj/Main.storyboard
@@ -1,24 +1,133 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="TEU-Z3-a1G">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <capability name="Map view configurations" minToolsVersion="14.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--List View Controller-->
+        <scene sceneID="Vsm-1H-Luh">
+            <objects>
+                <viewController id="pte-hm-yhS" customClass="ListViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tdC-4U-jo9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="KTQ-EQ-Iea">
+                                <rect key="frame" x="0.0" y="92" width="414" height="770"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="OZg-Dw-j1Z"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="KTQ-EQ-Iea" firstAttribute="leading" secondItem="OZg-Dw-j1Z" secondAttribute="leading" id="Gl7-Sd-Ycf"/>
+                            <constraint firstItem="KTQ-EQ-Iea" firstAttribute="top" secondItem="OZg-Dw-j1Z" secondAttribute="top" id="ScI-XV-h0k"/>
+                            <constraint firstItem="KTQ-EQ-Iea" firstAttribute="bottom" secondItem="OZg-Dw-j1Z" secondAttribute="bottom" id="gpk-CQ-mNx"/>
+                            <constraint firstItem="KTQ-EQ-Iea" firstAttribute="centerX" secondItem="tdC-4U-jo9" secondAttribute="centerX" id="lb7-mg-vpy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="mii-aV-cN3"/>
+                    <connections>
+                        <outlet property="TableView" destination="KTQ-EQ-Iea" id="9m8-0c-e58"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="toViewController" id="ykO-vK-0yU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ccC-jR-iA0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="128.98550724637681" y="2.6785714285714284"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TravelBook" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zoh-rm-ugL">
+                                <rect key="frame" x="0.0" y="259" width="414" height="516"/>
+                                <standardMapConfiguration key="preferredConfiguration"/>
+                            </mapView>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aGC-YD-Nbt">
+                                <rect key="frame" x="20" y="133" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="comment" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TAX-K9-6n4">
+                                <rect key="frame" x="20" y="190" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EZ4-n7-JK5">
+                                <rect key="frame" x="146" y="793" width="123" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="51" id="JOV-6o-Enl"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Save">
+                                    <fontDescription key="titleFontDescription" type="system" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="saveButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GBK-Ng-m73"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aGC-YD-Nbt" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0gS-YY-igr"/>
+                            <constraint firstItem="TAX-K9-6n4" firstAttribute="centerX" secondItem="zoh-rm-ugL" secondAttribute="centerX" id="9il-K1-udD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EZ4-n7-JK5" secondAttribute="bottom" constant="18" id="Fxg-rc-WkL"/>
+                            <constraint firstItem="zoh-rm-ugL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OSL-wj-y8k"/>
+                            <constraint firstItem="TAX-K9-6n4" firstAttribute="top" secondItem="aGC-YD-Nbt" secondAttribute="bottom" constant="23" id="Psn-A6-CNa"/>
+                            <constraint firstItem="zoh-rm-ugL" firstAttribute="centerX" secondItem="EZ4-n7-JK5" secondAttribute="centerX" id="Uve-3T-zAq"/>
+                            <constraint firstItem="aGC-YD-Nbt" firstAttribute="leading" secondItem="TAX-K9-6n4" secondAttribute="leading" id="Yc2-vL-qHr"/>
+                            <constraint firstItem="zoh-rm-ugL" firstAttribute="top" secondItem="TAX-K9-6n4" secondAttribute="bottom" constant="35" id="ZtP-Ac-LqU"/>
+                            <constraint firstItem="EZ4-n7-JK5" firstAttribute="top" secondItem="zoh-rm-ugL" secondAttribute="bottom" constant="18" id="byo-mt-hIh"/>
+                            <constraint firstItem="aGC-YD-Nbt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="fLp-uJ-5a8"/>
+                            <constraint firstItem="aGC-YD-Nbt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="41" id="iX7-Yw-ebS"/>
+                            <constraint firstItem="EZ4-n7-JK5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="146" id="qkI-It-Cfb"/>
+                            <constraint firstItem="aGC-YD-Nbt" firstAttribute="trailing" secondItem="TAX-K9-6n4" secondAttribute="trailing" id="xQ6-fx-cWd"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="jiV-sw-JMi"/>
+                    <connections>
+                        <outlet property="commentText" destination="TAX-K9-6n4" id="YWC-Mu-UmC"/>
+                        <outlet property="mapView" destination="zoh-rm-ugL" id="LW0-Hs-sqc"/>
+                        <outlet property="nameText" destination="aGC-YD-Nbt" id="JZv-Nr-7aW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="3.3482142857142856"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZU3-rY-jv4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TEU-Z3-a1G" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8f7-gn-Ivb">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="pte-hm-yhS" kind="relationship" relationship="rootViewController" id="11l-9S-8UB"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cMD-ph-EUR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-781.15942028985512" y="2.6785714285714284"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
